--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "@types/jquery": "^2.0.41",
     "@types/node": "^6.0.62",
+    "@types/ramda": "0.0.7",
     "@types/react": "^0.14.55",
     "@types/react-dom": "^0.14.19",
     "@types/typescript": "^2.0.0",
     "mobx": "^2.7.0",
     "mobx-react": "^4.0.3",
+    "ramda": "^0.23.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "typescript": "^2.2.2"
